# GCS-Launcher

./: .gitignore  README-EN.md  README.md  bun.lockb  index.html  package-lock.json  package.json  run.bat  script.js  svelte.config.js  vite.config.ts
Launcher/: ETo TAURI 2.0.txt  package-lock.json  package.json
Launcher/src/: index.html  script.js
Launcher/src-tauri/: Cargo.toml  tauri.conf.json
Launcher/src-tauri/capabilities/: migrated.json
Launcher/src-tauri/src/: main.rs
Launcher/src/res/: main.css
Updater/: package-lock.json  package.json
Updater/src/: index.html  script.js
Updater/src-tauri/: Cargo.toml  tauri.conf.json
Updater/src-tauri/capabilities/: migrated.json
Updater/src-tauri/src/: main.rs
Updater/src/res/: main.css
src/: app.html  index.html  script.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/components/Notification/: notification.svelte  style.module.scss
src/components/NotificationShort/: notificationShort.svelte  style.module.scss
src/components/NotificationSkeleton/: notificationSkeleton.svelte  style.module.scss
src/components/PlayButtonIcon/: playButtonIcon.svelte  style.module.scss
src/components/ProfilePost/: profilePost.svelte  style.module.scss
src/components/ProfilePostReply/: profilePostReply.svelte  style.module.scss
src/components/ProfilePostSecond/: profilePostSecond.svelte  style.module.scss
src/components/Select/: select.svelte
src/components/SettingsSidebar/: settingsSidebar.svelte  style.module.scss
src/components/Sidebar/: sidebar.svelte  style.module.scss
src/components/Titlebar/: style.module.scss  titlebar.svelte
src/components/Toggle/: ToggleCore.svelte  toggle.svelte
src/libs/: languages.js  library.js  style.module.scss
src/libs/languages/: bm.json  de.json  en.json  fr.json  nl.json  ru.json  tt.json  vi.json
src/res/: main.css
src/routes/: +layout.svelte  +page.svelte  +page.ts  style.module.scss
src/routes/notifications/: +page.svelte  style.module.scss
src/routes/profile/: +page.svelte  style.module.scss
src/routes/profile-gd/: +page.svelte  style.module.scss
src/routes/profile-jeros/: +page.svelte  style.module.scss
src/routes/profile-launcher/: +page.svelte  style.module.scss
src/routes/settings/: +page.svelte  style.module.scss
src/routes/settings/game/: +page.svelte
src/routes/settings/login/: +page.svelte
src/routes/settings/logout/: +page.svelte
src/routes/update/: +page.svelte
tutorial/EN/: BUILD-LAUNCHER.md  BUILD-UPDATER.md  INTRODUCTION.md  SETUP-UPDATE-BACKEND.md
tutorial/RU/: BUILD-LAUNCHER.md  BUILD-UPDATER.md  INTRODUCTION.md  SETUP-UPDATE-BACKEND.md
