[package]
name = "gcs"
version = "2.0.0"
description = "Лаунчер GreenCatsServer"
authors = ["MegaSa1nt"]
license = "MIT"
repository = ""
default-run = "gcs"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
sevenz-rust = "0.5.3"
reqwest = "0.11.18"
tauri-plugin-shell = "2.0.2"
tauri-plugin-fs = "2.0.3"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
chksum-md5 = "0.0.0"
sysinfo = "0.32.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
