[package]
name = "gdps-updater"
version = "1.0.0"
description = "Your GDPS launcher's updater"
authors = ["YourGDPS"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
sevenz-rust = "0.5.3"
reqwest = "0.11.18"
tauri-plugin-shell = "2.0.2"
sysinfo = "0.32.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
default = [ "custom-protocol" ]
custom-protocol = ["tauri/custom-protocol"]
